--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 	<div id="恶臭"></div>
 
 	<article>
+		<h1>好臭啊，臭死你</h1>
 		<h2>仓库地址</h2>
-		<p><a href="https://github.com/itorr/homo" target="_blank">https://github.com/itorr/homo</a></p>
+		<p><a href="https://lewis-li-lyf.github.io/114514/" target="_blank">https://lewis-li-lyf.github.io/114514/</a></p>
 	</article>
 
 	<script src="homo.js"></script>
